--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,800" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Helvetica" rel="stylesheet">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/style.css">
+       <!-- <link rel="stylesheet" href="css/main.css"> -->
 
         <!-- Sets the background image of the site but requires a hardcoded path will not exist on turn in
         <style>
