--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             }
 
             body {
-                   background-image: url("file:///Users/michelleablake/Documents/mountains.jpg");
+                   background-image: url("images/mountains.jpg");
                    background-color: #cccccc;
                 }
 
@@ -44,7 +44,7 @@
 
 
     </head>
-    <body><!--bgcolor=#000000--> 
+    <body><!--bgcolor=#000000-->
         <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
