--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,800" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Helvetica" rel="stylesheet">
 
-        <link rel="stylesheet" href="css/style.css">
+        <!-- <link rel="stylesheet" href="css/style.css"> -->
        <!-- <link rel="stylesheet" href="css/main.css"> -->
 
         <!-- Sets the background image of the site but requires a hardcoded path will not exist on turn in
@@ -36,6 +36,7 @@
 
             body {
                    background-image: url("images/mountains.jpg");
+                   background-size: cover;
                    background-color: #cccccc;
                 }
 
@@ -62,19 +63,19 @@
             <font position="static" color="#1A1A53" face="helvetica" size="15">Michelle Blake, <i>UI/UX Designer & Queen of the Front End</i></font>
         </h1>
     	</div>
-        <canvas id="canvas"></canvas>
+        <!-- <canvas id="canvas"></canvas>
 
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/main.js"></script> -->
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-        <script>
+        <!-- <script>
             window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
             ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
         </script>
-        <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+        <script src="https://www.google-analytics.com/analytics.js" async defer></script> -->
     </body>
 </html>
