--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
             h1 {
                 text-align: center;
                 text-shadow: 2px 2px #b0b3b7;
-
-
                 position: absolute;
                 top: 80px;
             }
@@ -37,6 +35,7 @@
             body {
                    background-image: url("images/mountains.jpg");
                    background-size: cover;
+                   background-repeat: no-repeat;
                    background-color: #cccccc;
                 }
 
